@@ -1,2 +1,0 @@
-@comment $NetBSD$
-@comment this plist intentionally left empty
